app.css
@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');

* {
    box-sizing: border-box;
}

body {
    display: flex;
    font-family: 'Raleway', sans-serif;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    margin: 0;
    position: relative;
}

.overlay {
    position: absolute;
    width: 80%;
    height: 80%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 10;
    border-radius: 10px;
    color: #fff;
    font-size: 3rem;
    padding: 1em;
    text-align: center;
}

.carousel {
    width: 100vw;
    height: 100vh;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    animation: zoomout 10s ease-in infinite;
    transition: all .5s ease-in;
}

@keyframes zoomout {
    0% {
        transform: scale(1.5);
    }

    100% {
        transform: scale(1);
    }
}

@media(max-width:900px) {
    .overlay {
        font-size: 10vw;
        font-size: 2.2rem;
    }
}

